--- a/Contact.html
+++ b/Contact.html
@@ -4,13 +4,45 @@
     <li>Emial:- aksrivastava164215t@gmail.com</li>
     <li>Address:- 4/92, Block No.8, Mehar Bagh Colony, Dayalbagh, Agra - 282005</li>
 </ul>
-<h4>Or,Submit any queries here</h4>
-<label for="">Name:</label>
-<input type="text">
-<br>
-<br>
-<label for="">Email:</label>
-<input type="text" name="" id="">
-<br>
-<br>
-<input type="submit" name="" id="">
+<h4><u>Or submit any queries here</u></h4>
+<form action="mailto:gutlee639@gmail.com" method="post">
+    <table cellspacing="10">
+        <tr>
+            <td><label for="fname">First Name:</label></td>
+            <td><input type="text"></td>
+            <td><label for="lname">Last Name:</label></td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td><label for="age">Age</label></td>
+            <td><input type="number"></td>
+        </tr>
+        <tr>
+            <td><label for="pnumber">Phone No:</label></td>
+            <td><input type="tel"></td>
+        </tr>
+        <tr>
+            <td><label for="EmailID">Email ID:</label></td>
+            <td><input type="email" name="" id=""></td>
+        </tr>
+        <tr>
+            <td><label for="reassure">Confirm?</label></td>
+            <td><label for="reassure">Yes: </label>
+                <input type="checkbox">
+                <label for="reassure">No: </label>
+                <input type="checkbox"></td>
+        </tr>
+        <tr>
+            <td>Your Query:</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><textarea name="" id="" cols="20" rows="5"></textarea></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit">
+                <input type="reset"></td>
+        </tr>
+    </table>
+</form>
