--- a/Contact.html
+++ b/Contact.html
@@ -1,48 +1,66 @@
-<h3><u>My Contact Detail:-</u></h3>
-<ul>
-    <li>Phone No.:- 9058675838</li>
-    <li>Emial:- aksrivastava164215t@gmail.com</li>
-    <li>Address:- 4/92, Block No.8, Mehar Bagh Colony, Dayalbagh, Agra - 282005</li>
-</ul>
-<h4><u>Or submit any queries here</u></h4>
-<form action="mailto:gutlee639@gmail.com" method="post">
-    <table cellspacing="10">
-        <tr>
-            <td><label for="fname">First Name:</label></td>
-            <td><input type="text"></td>
-            <td><label for="lname">Last Name:</label></td>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td><label for="age">Age</label></td>
-            <td><input type="number"></td>
-        </tr>
-        <tr>
-            <td><label for="pnumber">Phone No:</label></td>
-            <td><input type="tel"></td>
-        </tr>
-        <tr>
-            <td><label for="EmailID">Email ID:</label></td>
-            <td><input type="email" name="" id=""></td>
-        </tr>
-        <tr>
-            <td><label for="reassure">Confirm?</label></td>
-            <td><label for="reassure">Yes: </label>
-                <input type="checkbox">
-                <label for="reassure">No: </label>
-                <input type="checkbox"></td>
-        </tr>
-        <tr>
-            <td>Your Query:</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><textarea name="" id="" cols="20" rows="5"></textarea></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit">
-                <input type="reset"></td>
-        </tr>
-    </table>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h3><u>My Contact Detail:-</u></h3>
+    <ul>
+        <li>Phone No.:- 9058675838</li>
+        <li>Emial:- aksrivastava164215t@gmail.com</li>
+        <li>Address:- 4/92, Block No.8, Mehar Bagh Colony, Dayalbagh, Agra - 282005</li>
+    </ul>
+    <hr>
+    <h4><u>Or submit any queries here</u></h4>
+    <form action="mailto:gutlee639@gmail.com" method="post">
+        <table cellspacing="10">
+            <tr>
+                <td><label for="fname">First Name:</label></td>
+                <td><input type="text"></td>
+                <td><label for="lname">Last Name:</label></td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td><label for="age">Age</label></td>
+                <td><input type="number"></td>
+            </tr>
+            <tr>
+                <td><label for="pnumber">Phone No:</label></td>
+                <td><input type="tel"></td>
+            </tr>
+            <tr>
+                <td><label for="EmailID">Email ID:</label></td>
+                <td><input type="email" name="" id=""></td>
+            </tr>
+            <tr>
+                <td><label for="reassure">Confirm?</label></td>
+                <td><label for="reassure">Yes: </label>
+                    <input type="checkbox">
+                    <label for="reassure">No: </label>
+                    <input type="checkbox">
+                </td>
+            </tr>
+            <tr>
+                <td>Your Query:</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><textarea name="" id="" cols="20" rows="5"></textarea></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="submit">
+                    <input type="reset">
+                </td>
+            </tr>
+        </table>
+    </form>
+</body>
+
+</html>
