--- a/hobbies.html
+++ b/hobbies.html
@@ -1,5 +1,17 @@
-<ol>
-    <li>Cooking</li>
-    <li>Playing FPS games</li>
-    <li>Anime</li>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <ol>
+        <li>Cooking</li>
+        <li>Playing FPS games</li>
+        <li>Anime</li>
+    </ol>
+</body>
+</html>
