--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 <a href="Contact.html">Contacts</a>
             </td>
             <td>
-                <img class="logo" src="hcj.png" alt="hcj logo">
+                <div class="hcjlogo">
+                    <img class="logo" src="hcj.png" alt="hcj logo">
+                </div>
             </td>
         </tr>
     </table>
