--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <td>
                 <table cellspacing="20">
                     <tr>
-                        <td><img src="My Photoo.jpg" alt="my photo"></td>
+                        <td>
+                            <div class="myimage">
+                            <img src="My Photoo.jpg" alt="my photo">
+                            </div>
+                        </td>
                         <td><h1>Amrendra Srivastava</h1>
                             <p><em><strong>Founder And CEO of Falana </strong><a href="https://www.linkedin.com/in/amrendra-srivastava-780058164/">Company</a></em></p>
                             <p>I am a Web Developer. I ❤️ to cook.</p></td>
